--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,11 +5,6 @@
 # below each fixture, per the syntax in the comments below
 #
 one:
-  name: first task
-  details: task details
-  deadline: 2020-12-01 14:00:00 UTC
-  completed_at: 2020-12-01 15:00:00 UTC
-  category_id: 980190962
-  user_id: 980190962
+  email: email@example.com
 # two: {}
-# # column: value
+# column: value
